;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
 (name stdlib)
 (stdlib
   (exit_module std_exit)
   (internal_modules Camlinternal*)
   (modules_before_stdlib
     camlinternalFormatBasics
     camlinternalAtomic))
 (flags (
     -strict-sequence -absname -w +a-4-9-41-42-44-45-48-66
     -g -warn-error A -bin-annot -nostdlib
     -safe-string -strict-formats
 ))
 (ocamlopt_flags (:include %{project_root}/ocamlopt_flags.sexp))
 (preprocess
   (per_module
     ((action
          (run awk 
                 -f %{dep:expand_module_aliases.awk} %{input-file}))
      stdlib)
)))

(rule
 (targets sys.ml)
 (deps (:version ../VERSION) (:p sys.mlp))
 (action
   (with-stdout-to %{targets}
     (bash
       "sed -e \"s|%%VERSION%%|`sed -e 1q %{version} | tr -d '\r'`|\" %{p}"))))

(rule
  (targets camlheader camlheaderd camlheaderi camlheader_ur)
  (deps Makefile StdlibModules .depend)
  (action (run make %{targets})))

(install
  (files
    camlheader
    camlheaderd
    camlheaderi
    camlheader_ur

    stdlib.a
    stdlib.cma
    stdlib.cmxa
    .stdlib.objs/byte/stdlib.cmi
    .stdlib.objs/byte/stdlib.cmt
    .stdlib.objs/byte/stdlib.cmti

    arg.ml
    arg.mli
    array.ml
    array.mli
    arrayLabels.ml
    arrayLabels.mli
	atomic.ml
	atomic.mli
    bigarray.ml
    ; bigarray.mli is installed from otherlibs/bigarray/
    bool.ml
    bool.mli
    buffer.ml
    buffer.mli
    bytes.ml
    bytes.mli
    bytesLabels.ml
    bytesLabels.mli
    callback.ml
    callback.mli
    camlinternalComprehension.ml
    camlinternalComprehension.mli
    camlinternalFormat.ml
    camlinternalFormat.mli
    camlinternalFormatBasics.ml
    camlinternalFormatBasics.mli
    camlinternalLazy.ml
    camlinternalLazy.mli
    camlinternalMod.ml
    camlinternalMod.mli
    camlinternalOO.ml
    camlinternalOO.mli
    camlinternalAtomic.ml
    camlinternalAtomic.mli
    char.ml
    char.mli
    complex.ml
    complex.mli
    digest.ml
    digest.mli
	either.ml
	either.mli
    ephemeron.ml
    ephemeron.mli
    filename.ml
    filename.mli
    float.ml
    float.mli
    format.ml
    format.mli
    fun.ml
    fun.mli
    gc.ml
    gc.mli
    genlex.ml
    genlex.mli
    hashtbl.ml
    hashtbl.mli
    int.ml
    int.mli
    int32.ml
    int32.mli
    int64.ml
    int64.mli
    lazy.ml
    lazy.mli
    lexing.ml
    lexing.mli
    list.ml
    list.mli
    listLabels.ml
    listLabels.mli
    map.ml
    map.mli
    marshal.ml
    marshal.mli
    moreLabels.ml
    moreLabels.mli
    nativeint.ml
    nativeint.mli
    obj.ml
    obj.mli
    oo.ml
    oo.mli
    option.ml
    option.mli
    parsing.ml
    parsing.mli
    pervasives.ml
    printexc.ml
    printexc.mli
    printf.ml
    printf.mli
    queue.ml
    queue.mli
    random.ml
    random.mli
    result.ml
    result.mli
    scanf.ml
    scanf.mli
    seq.ml
    seq.mli
    set.ml
    set.mli
    stack.ml
    stack.mli
    stdLabels.ml
    stdLabels.mli
    std_exit.ml
    stdlib.ml
    stdlib.mli
    stream.ml
    stream.mli
    string.ml
    string.mli
    stringLabels.ml
    stringLabels.mli
    sys.ml
    sys.mli
    uchar.ml
    uchar.mli
    unit.ml
    unit.mli
    weak.ml
    weak.mli

    .stdlib.objs/byte/stdlib__Arg.cmi
    .stdlib.objs/byte/stdlib__Arg.cmt
    .stdlib.objs/byte/stdlib__Arg.cmti
    .stdlib.objs/byte/stdlib__Array.cmi
    .stdlib.objs/byte/stdlib__Array.cmt
    .stdlib.objs/byte/stdlib__Array.cmti
    .stdlib.objs/byte/stdlib__ArrayLabels.cmi
    .stdlib.objs/byte/stdlib__ArrayLabels.cmt
    .stdlib.objs/byte/stdlib__ArrayLabels.cmti
    .stdlib.objs/byte/stdlib__Atomic.cmi
    .stdlib.objs/byte/stdlib__Atomic.cmt
    .stdlib.objs/byte/stdlib__Atomic.cmti
    .stdlib.objs/byte/stdlib__Bigarray.cmi
    .stdlib.objs/byte/stdlib__Bigarray.cmt
    .stdlib.objs/byte/stdlib__Bigarray.cmti
    .stdlib.objs/byte/stdlib__Bool.cmi
    .stdlib.objs/byte/stdlib__Bool.cmt
    .stdlib.objs/byte/stdlib__Bool.cmti
    .stdlib.objs/byte/stdlib__Buffer.cmi
    .stdlib.objs/byte/stdlib__Buffer.cmt
    .stdlib.objs/byte/stdlib__Buffer.cmti
    .stdlib.objs/byte/stdlib__Bytes.cmi
    .stdlib.objs/byte/stdlib__Bytes.cmt
    .stdlib.objs/byte/stdlib__Bytes.cmti
    .stdlib.objs/byte/stdlib__BytesLabels.cmi
    .stdlib.objs/byte/stdlib__BytesLabels.cmt
    .stdlib.objs/byte/stdlib__BytesLabels.cmti
    .stdlib.objs/byte/stdlib__Callback.cmi
    .stdlib.objs/byte/stdlib__Callback.cmt
    .stdlib.objs/byte/stdlib__Callback.cmti
    .stdlib.objs/byte/stdlib__Char.cmi
    .stdlib.objs/byte/stdlib__Char.cmt
    .stdlib.objs/byte/stdlib__Char.cmti
    .stdlib.objs/byte/stdlib__Complex.cmi
    .stdlib.objs/byte/stdlib__Complex.cmt
    .stdlib.objs/byte/stdlib__Complex.cmti
    .stdlib.objs/byte/stdlib__Digest.cmi
    .stdlib.objs/byte/stdlib__Digest.cmt
    .stdlib.objs/byte/stdlib__Digest.cmti
    .stdlib.objs/byte/stdlib__Either.cmi
    .stdlib.objs/byte/stdlib__Either.cmt
    .stdlib.objs/byte/stdlib__Either.cmti
    .stdlib.objs/byte/stdlib__Ephemeron.cmi
    .stdlib.objs/byte/stdlib__Ephemeron.cmt
    .stdlib.objs/byte/stdlib__Ephemeron.cmti
    .stdlib.objs/byte/stdlib__Filename.cmi
    .stdlib.objs/byte/stdlib__Filename.cmt
    .stdlib.objs/byte/stdlib__Filename.cmti
    .stdlib.objs/byte/stdlib__Float.cmi
    .stdlib.objs/byte/stdlib__Float.cmt
    .stdlib.objs/byte/stdlib__Float.cmti
    .stdlib.objs/byte/stdlib__Format.cmi
    .stdlib.objs/byte/stdlib__Format.cmt
    .stdlib.objs/byte/stdlib__Format.cmti
    .stdlib.objs/byte/stdlib__Fun.cmi
    .stdlib.objs/byte/stdlib__Fun.cmt
    .stdlib.objs/byte/stdlib__Fun.cmti
    .stdlib.objs/byte/stdlib__Gc.cmi
    .stdlib.objs/byte/stdlib__Gc.cmt
    .stdlib.objs/byte/stdlib__Gc.cmti
    .stdlib.objs/byte/stdlib__Genlex.cmi
    .stdlib.objs/byte/stdlib__Genlex.cmt
    .stdlib.objs/byte/stdlib__Genlex.cmti
    .stdlib.objs/byte/stdlib__Hashtbl.cmi
    .stdlib.objs/byte/stdlib__Hashtbl.cmt
    .stdlib.objs/byte/stdlib__Hashtbl.cmti
    .stdlib.objs/byte/stdlib__Int.cmi
    .stdlib.objs/byte/stdlib__Int.cmt
    .stdlib.objs/byte/stdlib__Int.cmti
    .stdlib.objs/byte/stdlib__Int32.cmi
    .stdlib.objs/byte/stdlib__Int32.cmt
    .stdlib.objs/byte/stdlib__Int32.cmti
    .stdlib.objs/byte/stdlib__Int64.cmi
    .stdlib.objs/byte/stdlib__Int64.cmt
    .stdlib.objs/byte/stdlib__Int64.cmti
    .stdlib.objs/byte/stdlib__Lazy.cmi
    .stdlib.objs/byte/stdlib__Lazy.cmt
    .stdlib.objs/byte/stdlib__Lazy.cmti
    .stdlib.objs/byte/stdlib__Lexing.cmi
    .stdlib.objs/byte/stdlib__Lexing.cmt
    .stdlib.objs/byte/stdlib__Lexing.cmti
    .stdlib.objs/byte/stdlib__List.cmi
    .stdlib.objs/byte/stdlib__List.cmt
    .stdlib.objs/byte/stdlib__List.cmti
    .stdlib.objs/byte/stdlib__ListLabels.cmi
    .stdlib.objs/byte/stdlib__ListLabels.cmt
    .stdlib.objs/byte/stdlib__ListLabels.cmti
    .stdlib.objs/byte/stdlib__Map.cmi
    .stdlib.objs/byte/stdlib__Map.cmt
    .stdlib.objs/byte/stdlib__Map.cmti
    .stdlib.objs/byte/stdlib__Marshal.cmi
    .stdlib.objs/byte/stdlib__Marshal.cmt
    .stdlib.objs/byte/stdlib__Marshal.cmti
    .stdlib.objs/byte/stdlib__MoreLabels.cmi
    .stdlib.objs/byte/stdlib__MoreLabels.cmt
    .stdlib.objs/byte/stdlib__MoreLabels.cmti
    .stdlib.objs/byte/stdlib__Nativeint.cmi
    .stdlib.objs/byte/stdlib__Nativeint.cmt
    .stdlib.objs/byte/stdlib__Nativeint.cmti
    .stdlib.objs/byte/stdlib__Obj.cmi
    .stdlib.objs/byte/stdlib__Obj.cmt
    .stdlib.objs/byte/stdlib__Obj.cmti
    .stdlib.objs/byte/stdlib__Oo.cmi
    .stdlib.objs/byte/stdlib__Oo.cmt
    .stdlib.objs/byte/stdlib__Oo.cmti
    .stdlib.objs/byte/stdlib__Option.cmi
    .stdlib.objs/byte/stdlib__Option.cmt
    .stdlib.objs/byte/stdlib__Option.cmti
    .stdlib.objs/byte/stdlib__Parsing.cmi
    .stdlib.objs/byte/stdlib__Parsing.cmt
    .stdlib.objs/byte/stdlib__Parsing.cmti
    .stdlib.objs/byte/stdlib__Pervasives.cmi
    .stdlib.objs/byte/stdlib__Pervasives.cmt
    .stdlib.objs/byte/stdlib__Printexc.cmi
    .stdlib.objs/byte/stdlib__Printexc.cmt
    .stdlib.objs/byte/stdlib__Printexc.cmti
    .stdlib.objs/byte/stdlib__Printf.cmi
    .stdlib.objs/byte/stdlib__Printf.cmt
    .stdlib.objs/byte/stdlib__Printf.cmti
    .stdlib.objs/byte/stdlib__Queue.cmi
    .stdlib.objs/byte/stdlib__Queue.cmt
    .stdlib.objs/byte/stdlib__Queue.cmti
    .stdlib.objs/byte/stdlib__Random.cmi
    .stdlib.objs/byte/stdlib__Random.cmt
    .stdlib.objs/byte/stdlib__Random.cmti
    .stdlib.objs/byte/stdlib__Result.cmi
    .stdlib.objs/byte/stdlib__Result.cmt
    .stdlib.objs/byte/stdlib__Result.cmti
    .stdlib.objs/byte/stdlib__Scanf.cmi
    .stdlib.objs/byte/stdlib__Scanf.cmt
    .stdlib.objs/byte/stdlib__Scanf.cmti
    .stdlib.objs/byte/stdlib__Seq.cmi
    .stdlib.objs/byte/stdlib__Seq.cmt
    .stdlib.objs/byte/stdlib__Seq.cmti
    .stdlib.objs/byte/stdlib__Set.cmi
    .stdlib.objs/byte/stdlib__Set.cmt
    .stdlib.objs/byte/stdlib__Set.cmti
    .stdlib.objs/byte/stdlib__Stack.cmi
    .stdlib.objs/byte/stdlib__Stack.cmt
    .stdlib.objs/byte/stdlib__Stack.cmti
    .stdlib.objs/byte/stdlib__StdLabels.cmi
    .stdlib.objs/byte/stdlib__StdLabels.cmt
    .stdlib.objs/byte/stdlib__StdLabels.cmti
    .stdlib.objs/byte/stdlib__Stream.cmi
    .stdlib.objs/byte/stdlib__Stream.cmt
    .stdlib.objs/byte/stdlib__Stream.cmti
    .stdlib.objs/byte/stdlib__String.cmi
    .stdlib.objs/byte/stdlib__String.cmt
    .stdlib.objs/byte/stdlib__String.cmti
    .stdlib.objs/byte/stdlib__StringLabels.cmi
    .stdlib.objs/byte/stdlib__StringLabels.cmt
    .stdlib.objs/byte/stdlib__StringLabels.cmti
    .stdlib.objs/byte/stdlib__Sys.cmi
    .stdlib.objs/byte/stdlib__Sys.cmt
    .stdlib.objs/byte/stdlib__Sys.cmti
    .stdlib.objs/byte/stdlib__Uchar.cmi
    .stdlib.objs/byte/stdlib__Uchar.cmt
    .stdlib.objs/byte/stdlib__Uchar.cmti
    .stdlib.objs/byte/stdlib__Unit.cmi
    .stdlib.objs/byte/stdlib__Unit.cmt
    .stdlib.objs/byte/stdlib__Unit.cmti
    .stdlib.objs/byte/stdlib__Weak.cmi
    .stdlib.objs/byte/stdlib__Weak.cmt
    .stdlib.objs/byte/stdlib__Weak.cmti

    .stdlib.objs/native/stdlib.cmx

    .stdlib.objs/byte/camlinternalComprehension.cmi
    .stdlib.objs/byte/camlinternalMod.cmi
    .stdlib.objs/byte/camlinternalAtomic.cmi
    .stdlib.objs/byte/camlinternalFormatBasics.cmi
    .stdlib.objs/byte/camlinternalLazy.cmi
    .stdlib.objs/byte/camlinternalOO.cmi
    .stdlib.objs/byte/camlinternalFormat.cmi

    .stdlib.objs/byte/camlinternalComprehension.cmt
    .stdlib.objs/byte/camlinternalMod.cmt
    .stdlib.objs/byte/camlinternalAtomic.cmt
    .stdlib.objs/byte/camlinternalFormatBasics.cmt
    .stdlib.objs/byte/camlinternalLazy.cmt
    .stdlib.objs/byte/camlinternalOO.cmt
    .stdlib.objs/byte/camlinternalFormat.cmt

    .stdlib.objs/byte/camlinternalComprehension.cmti
    .stdlib.objs/byte/camlinternalMod.cmti
    .stdlib.objs/byte/camlinternalAtomic.cmti
    .stdlib.objs/byte/camlinternalFormatBasics.cmti
    .stdlib.objs/byte/camlinternalLazy.cmti
    .stdlib.objs/byte/camlinternalOO.cmti
    .stdlib.objs/byte/camlinternalFormat.cmti

    .stdlib.objs/native/camlinternalComprehension.cmx
    .stdlib.objs/native/camlinternalMod.cmx
    .stdlib.objs/native/camlinternalAtomic.cmx
    .stdlib.objs/native/camlinternalFormatBasics.cmx
    .stdlib.objs/native/camlinternalLazy.cmx
    .stdlib.objs/native/camlinternalOO.cmx
    .stdlib.objs/native/camlinternalFormat.cmx

    .stdlib.objs/byte/std_exit.cmi
    .stdlib.objs/byte/std_exit.cmo
    .stdlib.objs/byte/std_exit.cmt
    .stdlib.objs/native/std_exit.o
    .stdlib.objs/native/std_exit.cmx

    .stdlib.objs/native/stdlib__Sys.cmx
    .stdlib.objs/native/stdlib__Hashtbl.cmx
    .stdlib.objs/native/stdlib__Filename.cmx
    .stdlib.objs/native/stdlib__Queue.cmx
    .stdlib.objs/native/stdlib__StdLabels.cmx
    .stdlib.objs/native/stdlib__Weak.cmx
    .stdlib.objs/native/stdlib__Float.cmx
    .stdlib.objs/native/stdlib__Pervasives.cmx
    .stdlib.objs/native/stdlib__Fun.cmx
    .stdlib.objs/native/stdlib__Bigarray.cmx
    .stdlib.objs/native/stdlib__Array.cmx
    .stdlib.objs/native/stdlib__Int32.cmx
    .stdlib.objs/native/stdlib__Lexing.cmx
    .stdlib.objs/native/stdlib__ArrayLabels.cmx
    .stdlib.objs/native/stdlib__Obj.cmx
    .stdlib.objs/native/stdlib__Result.cmx
    .stdlib.objs/native/stdlib__Map.cmx
    .stdlib.objs/native/stdlib__Char.cmx
    .stdlib.objs/native/stdlib__Stream.cmx
    .stdlib.objs/native/stdlib__Printexc.cmx
    .stdlib.objs/native/stdlib__Lazy.cmx
    .stdlib.objs/native/stdlib__Parsing.cmx
    .stdlib.objs/native/stdlib__Option.cmx
    .stdlib.objs/native/stdlib__Uchar.cmx
    .stdlib.objs/native/stdlib__Buffer.cmx
    .stdlib.objs/native/stdlib__StringLabels.cmx
    .stdlib.objs/native/stdlib__Ephemeron.cmx
    .stdlib.objs/native/stdlib__String.cmx
    .stdlib.objs/native/stdlib__Nativeint.cmx
    .stdlib.objs/native/stdlib__Set.cmx
    .stdlib.objs/native/stdlib__ListLabels.cmx
    .stdlib.objs/native/stdlib__Bool.cmx
    .stdlib.objs/native/stdlib__Gc.cmx
    .stdlib.objs/native/stdlib__Seq.cmx
    .stdlib.objs/native/stdlib__Random.cmx
    .stdlib.objs/native/stdlib__Int.cmx
    .stdlib.objs/native/stdlib__Int64.cmx
    .stdlib.objs/native/stdlib__Scanf.cmx
    .stdlib.objs/native/stdlib__Printf.cmx
    .stdlib.objs/native/stdlib__Complex.cmx
    .stdlib.objs/native/stdlib__Stack.cmx
    .stdlib.objs/native/stdlib__Bytes.cmx
    .stdlib.objs/native/stdlib__MoreLabels.cmx
    .stdlib.objs/native/stdlib__Genlex.cmx
    .stdlib.objs/native/stdlib__Oo.cmx
    .stdlib.objs/native/stdlib__Format.cmx
    .stdlib.objs/native/stdlib__Unit.cmx
    .stdlib.objs/native/stdlib__List.cmx
    .stdlib.objs/native/stdlib__Arg.cmx
    .stdlib.objs/native/stdlib__Callback.cmx
    .stdlib.objs/native/stdlib__Marshal.cmx
    .stdlib.objs/native/stdlib__BytesLabels.cmx
    .stdlib.objs/native/stdlib__Digest.cmx
    .stdlib.objs/native/stdlib__Atomic.cmx
    .stdlib.objs/native/stdlib__Either.cmx
  )
  (section lib)
  (package ocaml))
